--- a/style.css
+++ b/style.css
@@ -276,3 +276,49 @@ nav {
   background-color: var(--brightRed);
   color: var(--lightGray);
 }
+
+.section__3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-image: url("./images/bg-simplify-section-mobile.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 25rem;
+  background-color: hsl(12, 88%, 59%);
+  margin-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.section__3 h3 {
+  color: var(--lightGray);
+  max-width: 20rem;
+  width: 100%;
+  margin-top: 3rem;
+  margin-inline: auto;
+  text-align: center;
+  font-size: 2.3rem;
+  font-weight: bold;
+  line-height: 3rem;
+}
+
+.section__3 button {
+    font-family: "Be Vietnam Pro", sans-serif;
+  font-size: 0.9rem;
+  font-weight: bold;
+  border-radius: 3rem;
+  display: block;
+  max-width: 8rem;
+  width: 100%;
+  margin-inline: auto;
+  margin-top: 1.5rem;
+  box-shadow: 1px 6px 10px 1px hsla(12, 88%, 59%, 0.389);
+  outline: none;
+  padding-block: 0.9rem;
+  padding-inline: 1.3rem;
+  border: none;
+  background-color: var(--lightGray);
+  color: var(--brightRed);
+}
