--- a/style.css
+++ b/style.css
@@ -43,6 +43,34 @@ nav {
 
 .nav__lists {
   display: none;
+  position: absolute;
+  top: 2.7%;
+  width: 85%;
+  margin: auto;
+  background-color: var(--lightGray);
+  padding: 2.5rem;
+}
+
+.nav__lists li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+}
+
+.nav__lists li a {
+  list-style-type: none;
+  color: var(--darkBlue);
+  font-weight: 600;
+  margin-block: 0.7rem;
+
+  /* margin-bottom: 1rem; */
+}
+
+.blur__background {
+  backdrop-filter: blur(5px);
+  background-color: hsla(227, 12%, 61%, 0.575);
 }
 
 .nav__cta {
