--- a/style.css
+++ b/style.css
@@ -577,18 +577,97 @@ p.copyright {
     align-items: flex-start;
     justify-content: center;
     margin-top: 8rem;
-    margin-inline:1.2rem;
+    margin-inline: 1.2rem;
+    margin-bottom: 5rem;
   }
 
   .section__2 .text__section h2 {
-  margin: 0;
-  text-align: left;
-  max-width: 40rem;
-  width: 100%;
+    margin: 0;
+    text-align: left;
+    max-width: 40rem;
+    width: 100%;
   }
 
   .section__2 .text__section p {
     text-align: left;
-    
   }
+
+  .section__3 {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-image: url("./images/bg-simplify-section-desktop.svg");
+    background-size: cover;
+    background-repeat: repeat;
+    height: 10rem;
+  }
+
+  .section__3 h3 {
+    max-width: 27rem;
+    width: 100%;
+    text-align: left;
+    font-size: 1.9rem;
+    padding-left: 1.7rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    /* margin-inline: 1.8rem; */
+  }
+  header {
+    padding-inline: 1.2rem;
+  }
+
+  .heading__text h1 {
+    margin-inline: 0;
+  }
+
+  .heading__text p {
+    max-width: 25rem;
+    width: 100%;
+  }
+
+  .footer__elements {
+    flex-direction: row;
+    justify-content: space-between;
+    padding-inline: 1.7rem;
+  }
+
+  .footer__logo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+
+  .footer__logo img {
+    margin-left: 0;
+  }
+
+  .footer__nav__basic {
+    gap: 5rem;
+  }
+
+  .footer__nav__3 {
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-top: -2rem;
+  }
+
+  .footer__nav__3 .cta__btn {
+    margin: 0;
+  }
+}
+
+@media screen and (min-width: 1350px) {
+  body {
+    padding-inline: 8rem;
+    max-width: 1440px;
+    width: 100%;
+    margin-inline: auto;
+  }
+
 }
